# fakegaussian

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml  test.yml
fakegaussian/: cli.py  fake.py
