[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=7"]
build-backend = "setuptools.build_meta"

[project]
name = "fakegaussian"
dynamic = ["version"]
description = "fabricate a Gaussian program to test programs that integrate Gaussian, without really installing it."
authors = [
    { name = "Jinzhe Zeng", email = "jinzhe.zeng@ustc.edu.cn"},
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
dependencies = [
    'numpy',
    'ase',
]
requires-python = ">=3.7"
readme = "README.md"
keywords = ["gaussian"]

[project.scripts]
g16 = "fakegaussian.cli:main"

[project.urls]
repository = "https://github.com/njzjz/fakegaussian"

[tool.setuptools.packages.find]
include = ["fakegaussian*"]

[tool.setuptools_scm]

[tool.ruff]
select = [
    "E", # errors
    "F", # pyflakes
    "D", # pydocstyle
    "I", # isort
    "UP", # pyupgrade
    "C4", # flake8-comprehensions
    "NPY", # numpy
    "RUF", # ruff
]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D205",
    "E501",
]

[tool.ruff.pydocstyle]
convention = "numpy"
